# FUXA

./: .gitignore  agents.md  build-client.bat  build-electron.bat  build-exclude.txt  build-headless.ps1  build-release.ps1  build-server.bat  changelog.md  mps
app/electron/: package-lock.json  package.json
app/headless/: fuxa-headless.config.example.json  headless-entry.js
app/tauri-client/: README.md  package-lock.json  package.json
app/tauri-client/src/: index.html  main.js  styles.css
app/tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
app/tauri-client/src-tauri/.cargo/: config.toml
app/tauri-client/src-tauri/capabilities/: default.json
app/tauri-client/src-tauri/src/: lib.rs  main.rs
app/tauri-server/: README.md  package-lock.json  package.json
app/tauri-server/src/: index.html  main.js  styles.css
app/tauri-server/src-tauri/: Cargo.toml  tauri.conf.json
app/tauri-server/src-tauri/.cargo/: config.toml
app/tauri-server/src-tauri/capabilities/: default.json
app/tauri-server/src-tauri/src/: lib.rs  main.rs
client/: package-lock.json
client/src/: index.html
client/src/app/: app.component.ts  app.module.ts  app.routing.ts  auth.guard.ts
server/: main.js  package-lock.json  package.json  settings.default.js
server/api/: index.js
server/api/auth/: index.js
server/api/command/: index.js
server/api/events/: index.js
server/api/projects/: index.js
server/api/resources/: index.js
server/api/scripts/: index.js
server/runtime/: index.js
server/runtime/alarms/: alarmstorage.js  index.js
server/runtime/devices/: device.js  (+2 more)
(+95 files in other folders)
