[package]
name = "fuxa-client"
version = "1.0.0"
description = "FUXA SCADA/HMI Desktop Client"
edition = "2021"

[lib]
name = "fuxa_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
