[package]
name = "fuxa-server"
version = "1.0.0"
description = "FUXA SCADA/HMI Server Manager"
edition = "2021"

[lib]
name = "fuxa_server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
